# syscalls-cpp

./: CMakeLists.txt  readme.md
.github/workflows/: ci.yml
examples/: CMakeLists.txt  basic-usage.cpp  custom-generator.cpp
include/: crt.hpp  hash.hpp  native_api.hpp  shared.hpp  syscall.hpp
include/syscalls-cpp/: crt.hpp  native_api.hpp  shared.hpp  syscall.hpp
tests/: CMakeLists.txt  test_crt.cpp  test_hash.cpp  test_integration.cpp
